includes/style.css
*{
	margin: 0px;
	padding: 0px;
	font-family: 'Alef', sans-serif;
}
#clear{clear: both;}

.header_mobile {
	position:relative;
	background-color:#e6e6e6;
	height:106px;
	width:100%;
}
.logo {
	position:absolute;
	right:90px;
	line-height:106px;
	font-size:30px;
}
.home {
	position:absolute;
	left:30px;
	line-height:106px;
	font-size:35px;

}
.home a {color:#000000;}
.home a:hover {
	text-decoration: none;
	color:#000000;
}
.bread {
	text-align:center;
	color:#737373;
	padding-top:70px;
}
.breadSelect {
	display:inline;
	color:#000000;
}
.bar {
	position:absolute;
	line-height:106px;
	font-size:35px;
	right:30px;
}
.greet {
	padding-top: 50px;
	text-align: center;
}
.hamburger {
	width: 31px;
	height: 100px;
}
.sidenav {
	height: 100%;
	width: 0;
	position: fixed;
	z-index: 1;
	top: 0;
	left: 0;
	background-color: #e6e6e6;
	overflow-x: hidden;
	transition: 0.5s;
	padding-top: 60px;
}
.sidenav a {
	padding: 8px 8px 8px 32px;
	text-decoration: none;
	font-size: 25px;
	color: #080101;
	display: block;
	transition: 0.3s;
	text-align: left;
}
.sidenav a:hover {color: #080101;}
.sidenav .closebtn {
	position: absolute;
	top: 0;
	right: 25px;
	font-size: 36px;
	margin-left: 50px;
}
.top_nav_box {
	position:absolute;
	width:100%;
	height:190px;
	background-color: #929292;
	top:0px;
}
.textMain {
	position:relative;
	line-height:10px;
	width: 83px;
	top:30px;
}
iframe {
	display:block;
	margin: 0 auto;
}
.top_nav_box p {text-align: center;}
.middle_nav_box {
	position:absolute;
	width:100%;
	height:74px;
	background-color: #aaaaaa;
	top:190px;
}
.textMain2 {
	position:relative;
	line-height:5px;
	top:-25px;
	text-align:center;
	width:249px;
}
.textMain2 h5 {display:inline;}
.menu_box {
	position: relative;
	width:100%;
	height:70px;
	border: solid #929292 1px;
	top:204px;
}
.whiteCircle {
	position:relative;
	top:5px;
	width: 83px;
	height: 83px;
	background: #ffffff;
	-moz-border-radius: 50px;
	-webkit-border-radius: 50px;
	border-radius: 50px;
	background-image:url("../images/nav-person.png");
	background-position: center;
	background-repeat: no-repeat;
}
.whiteCircle2{
	position:relative;
	top:-12px;
	width: 24px;
	height: 24px;
	background: #ffffff;
	-moz-border-radius: 50px;
	-webkit-border-radius: 50px;
	border-radius: 50px;
	background-image:url("../images/king.png");
	background-position: center;
	background-repeat: no-repeat;
}
@media screen and (max-width: 580px) {
	.sidenav {padding-top: 15px;}
	.sidenav a {font-size: 12px;}
	.menu_box {top: 247px;}
	.textMain2 {visibility: hidden;}
	.textMain2 p h5{visibility: hidden;}
	.sidenav .closebtn{right: 2px;}
	.logo {
		position:absolute;
		right:30px;
		line-height:106px;
		font-size:30px;
	}
	.bar {
		position:absolute;
		line-height:106px;
		font-size:35px;
		left:30px;
	}
	.home{visibility: hidden;}
	.whiteCircle {
		width: 60px;
		height: 60px;
	}
}
.bigBox {
	position: relative;
	width: 100%;
	height: 300px;
	background-color: #f1f1f1;
}
.home_map iframe {
	position:relative;
	top:30px;
}
.choiceBorder {
	position:relative;
	height:80px;
	width:85px;
	border-radius:10px;
	background-color:#ebebeb;
}
.choiceBorder a {
	color:#000000;
	display:block;
	text-align:center;
	padding-top:50px;
	font-weight:bold;
}
.choiceBorder a:hover {color:#000000;}
.reciver {
	position:absolute;
	background-image:url("../images/reciverpic.png");
	background-repeat:no-repeat;
	background-position:center top;
	left:240px;
}
.sender {
	position:absolute;
	background-image:url("../images/senderpic.png");
	background-repeat:no-repeat;
	background-position:center top;
	left:90px;
}
.main_choice {
	position:relative;
	height:100px;
	width:50px;
	right:180px;
}
.main_choice h5 {
	position:absolute;
	text-align:center;
	left:198px;
	top:25px;
}
/*------------------*/
.grayArea {
	position:relative;
	background-color:#f7f6f6;
	height:67px;
	text-align:center;
	line-height:67px;
	font-size:20px;
}
.mainSplice {
	position:relative;
	height:100px;
	border: 1px solid #cccccc;
	border-top:0px;
	text-align:right;
	line-height:100px;
}
.mainSplice label {
	position: absolute;
	width: 500px;
	right: 7.5%;
	text-align: right;
}
.mainSplice select{
	margin-right:30px;
}
.next, .next:hover {
	color:#000000;
	text-decoration:none;
}
.labelAdj {
	padding-right:12px;
}
.next {
	display:block;
	position: absolute;
	background-color:#e5e5ea;
	border: 2px solid none;
	border-radius: 5px;
	height:65px;
	width:190px;
	text-align:center;
	line-height:65px;
	left:10%;
	top: 90%;
}

.senderButton {padding-top:20px;}
/********/
.mapPic iframe {
	position:relative;
	top:20px;
}
.rangeWidth {
	position:relative;
	width:335px;
	margin-top:20px;
}
.rangeCenter {text-align:center}


/*------------------*/
.smallLineHieght {line-height: 30px;}
.mainSplice p {margin-right: 7.5%;}
.imgSplice {
	position:relative;
	height:350px;
	border: 1px solid #cccccc;
	border-top:0px;
	text-align:right;
	line-height:50px;
}
.imgSplice p {
	position: absolute;
	right: 0px;
}
.ok {
	top: 90%;
	display:block;
	position: absolute;
	background-color:#00FF00;
	border: 2px solid none;
	border-radius: 5px;
	height:65px;
	width:190px;
	text-align:center;
	line-height:65px;
	left:10%;
}
.ok, .ok:hover {
	color:#000000;
	text-decoration:none;
}
.prev {
	top: 90%;
	display:block;
	position: absolute;
	background-color:#e5e5ea;
	border: 2px solid none;
	border-radius: 5px;
	height:65px;
	width:190px;
	text-align:center;
	line-height:65px;
	left:70%;
}
.prev, .prev:hover {
	color:#000000;
	text-decoration:none;
}
.imgSplice p{margin-right: 7.5%;}
.mapPic2 iframe {
	position:relative;
	top:35px;
}
@media screen and (max-width: 580px) {
	.prev {left:50%;}
	.next, .ok, .nextdiffloc  {left:2%;}
}
/*------------------*/
.customerList, th, td {
	border: 1px solid black;
	text-align: right;
	font-size: 25px;
	padding: 5px;
}
.customerList {
	position: relative;
	top:200px;
}
.collapsible {
	background-color: #eee;
	color: #444;
	cursor: pointer;
	padding: 18px;
	width: 100%;
	text-align: left;
	outline: none;
	font-size: 15px;
	text-align: right;
}
.active {background-color: #ccc;}
.content {
	width: 400px;
	height: 400px;
	position: relative;
	display: none;
	overflow: hidden;
	background-color: #f1f1f1;
	flex-basis: 200px;
}
#senderList {
	width: 400px;
	height: 400px;
}
.SenderListWrapper {margin-top:30px;}
.menPic {
	background-image:url("../images/men.png");
	background-repeat: no-repeat;
	background-position:right;
	padding-right:50px;
	background-position: right 10px bottom 10px;
}
.womenPic {
	background-image:url("../images/women.png");
	background-repeat: no-repeat;
	background-position: right 10px bottom 10px;
	padding-right:50px;
}
.contentBox {
	position:relative;
	border: solid;
	float: right;
	width: 200px;
	height: 100px;
	text-align: right;
	line-height:20px;
}
.contentBox p{
	padding-right:30px;
	padding-top:10px;
}
.contentBox .symbol {
	position:absolute;
	top:38px;
	right:3px;
}
.textInBox1 {
	position:absolute;
	right:38px;
	top:35px;
}
.textInBox2 {
	position:absolute;
	right:40px;
	top:25px;
}
.textInBoxApprove {
	position:absolute;
	right:45px;
	top:35px;
	font-size: 50px;
}
.textInBoxApprove a, a:hover {
	color: #FFFFFF;
	text-decoration: none;
}
.NIS {
	position:absolute;
	top:32px;
	right:0px;
	padding-right:3px;
	font-size:30px;
}
.approve {background-color: green;}
/**********/
.congratsSender {
	position:relative;
	text-align:center;
	top:200px;

}
.congratsSender section {
	font-size:80px;
	color:#14eb3f;
	padding-bottom:10px;
}
.failSender {
	position:relative;
	text-align:center;
	top:200px;

}
.failSender section {
	font-size:100px;
	color:#ff0000;
	padding-bottom:10px;
}
/************** reciver 1*/
.radio_rec {
	display:inline;
	margin-left:50px;}

.nextdiffloc {
	display:block;
	position: absolute;
	background-color:#e5e5ea;
	border: 2px solid none;
	border-radius: 5px;
	height:65px;
	width:190px;
	text-align:center;
	line-height:65px;
	left:10%;
}
.nextdiffloc , .nextdiffloc :hover {
	color:#000000;
	text-decoration:none;
}

/**************/
.contentReciver {
	width: 400px;
	height: 300px;
	position: relative;
	display: block;
	overflow: hidden;
	flex-basis: 200px;
	top:30px;
}
.reciverPrice {
	text-align: center;
	margin-top:40px;
	font-weight: bold;
}
.reciverPrice section {font-size: 25px;}
/****************/

